<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/space_140"
    android:layout_gravity="center_vertical"
    android:layout_marginHorizontal="@dimen/space_50">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/rounded_background">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_16"
            android:layout_marginTop="@dimen/space_30"
            android:text="@string/dialog_header_remove"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/size_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:layout_margin="@dimen/space_16"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_yes"
                android:layout_width="@dimen/space_50"
                android:layout_height="@dimen/space_30"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_background"
                android:text="@string/yes"
                android:textColor="@color/app_color_blue"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_no"
                android:layout_width="@dimen/space_50"
                android:layout_height="@dimen/space_30"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/space_50"
                android:background="@drawable/button_background"
                android:text="@string/no"
                android:textColor="@color/app_color_blue"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>


</FrameLayout>


